tests/NormalTests/paczka2/big_fuzzy/18931830.err
Error in line 5: W8HKUOsB Sv69 19,8
Error in line 1: FBYvOYK17to S977 89,5
Error in line 4: W8HKUOsB S569 7,9
Error in line 10: W8HKUOsB S286 47,5
Error in line 12: W8HKUOsB A902 70,5
Error in line 26: hbKq1T9qw S569 13,0
Error in line 28: W8HKUOsB S977 104,4
Error in line 27: hbKq1T9qw A902 45,5
Error in line 14: BMZseqk7t7 S286 172,8
Error in line 67: S977 S286 97,5
Error in line 66: wja1GCR S569 2,8
Error in line 77: wja1GCR S286 78,9
Error in line 78: BMZseqk7t7 A902 6,6
Error in line 87: BMZseqk7t7 S977 203,01
Error in line 96: S977 A902 53,0
Error in line 81: BMZseqk7t7 S977 51,8
Error in line 97: S977 S569 4,7
Error in line 106: FBYvOYK17to Sm69 11,7
Error in line 103: S977 S286 9,5
Error in line 65: W8HKUOsB S977 31,9
Error in line 125: W8HKUOsB S569 50,9
Error in line 126: W8HKUOsB A902 74,9
Error in line 111: FBYvOYK17to S569 53,5
Error in line 135: BMZseqk7t7 S569 64,7
Error in line 128: W8HKUOsB S569 13,3
Error in line 137: hbKq1T9qw S977 83,4
Error in line 140: BMZseqk7t7 S977 33,4
Error in line 147: FBYvOYK17to A902 33,6
Error in line 159: FBYvOYK17to S286 25,7
Error in line 154: W8HKUOsB S569 87,7
Error in line 175: BMZseqk7t7 A902 33,87
Error in line 173: W8HKUOsB S569 64,6
Error in line 178: YF9N9mSgQ S569 3,26
Error in line 184: W8HKUOsB S977 26,8
Error in line 186: W8HKUOsB A902 -2,5
Error in line 172: BMZseqk7t7 S977 22,4
Error in line 193: BMZseqk7t7 A902 12,5
Error in line 196: BMZseqk7t7 S569 41,1
Error in line 201: S977 S286 89,1
Error in line 203: S977 A902 83,5
Error in line 197: wja1GCR A902 51,4
Error in line 208: wja1GCR S286 99,4
Error in line 209: BMZseqk7t7 A902 78,7
Error in line 213: FBYvOYK17to S569 5,11
Error in line 207: YF9N9mSgQ S569 182,5
Error in line 210: wja1GCR S569 57,4
Error in line 215: wja1GCR S286 95,8
Error in line 211: BMZseqk7t7 S569 14,9
Error in line 204: S977 A90 180,4
